# MiniEngine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  imgui.ini  miniengine.settings.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
assets/New Folder/: free_1975_porsche_911_930_turbo.glb.miniengine_asset.yaml  free_1975_porsche_911_930_turbo_material_00.material.yaml  free_1975_porsche_911_930_turbo_material_01.material.yaml  free_1975_porsche_911_930_turbo_material_02.material.yaml  free_1975_porsche_911_930_turbo_material_03.material.yaml  free_1975_porsche_911_930_turbo_material_04.material.yaml  free_1975_porsche_911_930_turbo_material_05.material.yaml  free_1975_porsche_911_930_turbo_material_06.material.yaml  free_1975_porsche_911_930_turbo_material_07.material.yaml  free_1975_porsche_911_930_turbo_material_08.material.yaml  free_1975_porsche_911_930_turbo_material_09.material.yaml  free_1975_porsche_911_930_turbo_material_10.material.yaml  free_1975_porsche_911_930_turbo_material_11.material.yaml  free_1975_porsche_911_930_turbo_material_12.material.yaml  free_1975_porsche_911_930_turbo_material_13.material.yaml
assets/editor/: default_scene.yaml
assets/models/cottage_fbx/: cottage_fbx.fbx.miniengine_asset.yaml
assets/models/cottage_fbx/materials/: material_00.material.yaml
assets/textures/: checkerboard.ppm
cmake/: AddFbxSdk.cmake
docs/: PROJECT_SUMMARY.md
engine/application/: CMakeLists.txt  application.h  editor_application.cpp  editor_application.h
engine/asset/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  gltf_model_loader.cpp  material_graph_runtime.cpp  model_loader.cpp  model_loader.h  model_post_process.h  texture_loader.cpp  texture_loader.h
engine/core/: CMakeLists.txt  render_backend_type.h
engine/core/input/: gamepad_backend.cpp  gamepad_backend.h  input.cpp  input.h
engine/core/log/: log.cpp  log.h
engine/logic/: CMakeLists.txt  editor_scene.cpp  editor_scene.h  editor_world.h  logic_layer.h
engine/platform/: CMakeLists.txt
engine/platform/file_dialog/: file_dialog.cpp  file_dialog.h  file_dialog_backend.cpp  file_dialog_backend.h
engine/platform/input/: input.cpp  input.h
engine/platform/ui/: ui_scale.cpp  ui_scale.h
engine/platform/window/: window.cpp  window.h  window_platform.cpp  window_platform.h
engine/renderer/: CMakeLists.txt  camera.cpp  camera.h  editor_backend_base.cpp  editor_backend_base.h  editor_ui.cpp  editor_ui.h  engine_settings.cpp  engine_settings.h  gltf_model_loader.cpp  gltf_model_loader.h  material.h  material_graph_runtime.cpp  material_graph_runtime.h  mesh.cpp  mesh.h  model_loader.cpp  model_loader.h  model_post_process.cpp  render_backend.h  render_types.h  renderer_shared_state.h  renderer_world.cpp  renderer_world.h  texture_loader.cpp
engine/renderer/imgui/: imgui_impl_sdl3.cpp  imgui_impl_sdl3.h
engine/renderer/metal/: renderer.h  renderer.mm
engine/renderer/opengl/: gl_functions.cpp  gl_functions.h  imgui_layer.cpp  imgui_layer.h  renderer.cpp  renderer.h
engine/renderer/rhi/: backend.h  factory.cpp  factory.h
engine/renderer/vulkan/: buffer.cpp  buffer.h  camera.cpp  camera.h  command.cpp  command.h  common.h  device.cpp  device.h  editor_scene.cpp  editor_scene.h  fbx_model_loader.cpp  fbx_model_loader.h  imgui_layer.cpp  imgui_layer.h  instance.cpp  instance.h  model_loader.cpp  model_loader.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  scene_viewport.cpp  scene_viewport.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  texture_loader.cpp  texture_loader.h  uniform_buffer.cpp  uniform_buffer.h  upload_batch.cpp  upload_batch.h  world_units.h
engine/scene/: CMakeLists.txt  material_graph.h  scene_components.h  scene_module.cpp  scene_world.h  world_units.h
scripts/: README.md  bootstrap-deps.ps1  bootstrap-deps.sh  build.ps1  build.sh  generate-sln.ps1  generate-xcode.sh
shaders/vulkan/: triangle.frag  triangle.vert
